RWD issues resolved: background image not covering all background, styling in game mode, smaller font-size for mobiles added

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,6 @@
 @import './reset';
 @import './variables';
-@import './button';
+@import './components/button';
 @import './components/MenuOptions';
 @import './components/GameModeName';
 @import './components/UsersRanking';
@@ -14,8 +14,9 @@
 html,
 body {
   height: auto;
- @media (min-width: 1024px) {
-    height: 100%;
+
+ @media (max-width: 1024px) {
+      font-size: 12px;
  }
 }
 
